Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-03-19 Tim
 PATCH: [ 1680209 ] New icons from Alexander Skinner (Part 1)
  Based on icons by Alexander Skinner
  Src/res: copy.bmp cut.bmp language.bmp paste.bmp print.bmp select_all.bmp select_font.bmp
 PATCH: [ 1683289 ] Swedish translation update for Improve Line filters dialog
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2007-03-19 Kimmo
 Remove extra line from manifest file
  Src/res: WinMergeU.exe.manifest

2007-03-18 Kimmo
 PATCH: [ 1682475 ] Improve Line filters dialog (add new files I forgot to add)
  Src: Merge.dsp
  Src new files: LineFiltersList.cpp LineFiltersList.h

2007-03-17 Kimmo
 PATCH: [ 1682475 ] Improve Line filters dialog
  Src: DirDoc.cpp MainFrm.cpp MainFrm.h Merge.rc Merge.rc MergeDoc.cpp OptionsDef.h
   OptionsInit.cpp PropLineFilter.cpp PropLineFilter.h
  Src/Languages/*: Merge*.rc
 BUG: [ 1682500 ] Crash when comparing empty folders
  Reported and analyzed by Takashi
  Src: DirScan.cpp

2007-03-15 Kimmo
 Trivial string initialization fix
  Src: SyntaxColors.cpp

2007-03-13 Kimmo
 PATCH: [ 1679196 ] Cleanup logfile class usage
  Src: DiffWrapper.cpp DirActions.cpp DirDoc.cpp DirScan.cpp FolderCmp.cpp MainFrm.cpp
   Merge.cpp Merge.h MergeDoc.cpp Plugins.cpp StdAfx.cpp StdAfx.h
  Src/Common: LogFile.cpp LogFile.h

2007-03-12 Kimmo
 Remove unneeded include lines
  Src: DirDoc.cpp
 Remove unneeded initialization
  Src: CCPrompt.cpp
 PATCH: [ 1678676 ] Swedish translation of New Copy Confirmation dialog
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2007-03-11 Jan Hryz
 Czech translation - translation of "confirm copy" dialog
  Src/Languages/Czech/MergeCzech.rc

2007-03-08 Kimmo
 PATCH: [ 1664689 ] French translation (update2)
  Submitted by Jean-F Jolin
  Src/Languages/French: MergeFrench.rc
 Remove two unused functions, improve comments
  Src: DirActions.cpp